--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
       "presence": "online"
     },
     {
-      "text": "💬 Usa /send-verify",
+      "text": "💬 Usa /help",
       "type": "PLAYING",
       "presence": "online"
     },
