--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   "verifyEmbedTitle": "📋 VERIFY",
   "verifyEmbedDescription": "Benvenuto su Hamster House\nSe vuoi unirti al nostro server, ti devi verificare.\nCliccando sul pulsante qui sotto e si avvierà  il captcha.\nSe riscontri problemi con la verifica, apri un ticket nella sezione <#1371847881425817701> :wine_glass:.",
   "verifyEmbedColor": "#2b2d31",
+  "verifyImageUrl": "https://i.imgur.com/HVkN9Qk.png",
   "statusList": [
     {
       "text": "👀 Verifica attiva",
