--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Bot Discord con comandi e funzioni personalizzate",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "deploy": "node deploy-commands.js"
-  },
+  "start": "concurrently \"node index.js\" \"node bot.js\"",
+  "deploy": "node deploy-commands.js"
+}
+,
   "dependencies": {
     "canvas": "^3.1.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "express": "^5.1.0",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
