--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "ownerId": "676113660678242305",
   "clientId": "1372558922266836992",
   "guildId": "1286251696640753706",
   "reportChannelId": "1403209672306987068",
